force-app/main/default/objects/Case/fields/L_BAU_Current_High_School__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Current_High_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current High School</description>
    <inlineHelpText>Current High School</inlineHelpText>
    <label>Current High School</label>
    <referenceTo>I_ST_Current_High_School__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>