force-app/main/default/objects/Case/fields/L_BAU_Current_High_School_Name__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Current_High_School_Name__c</fullName>
    <formula>L_BAU_Current_High_School__r.I_ST_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current High School Name</label>
    <type>Text</type>
</CustomField>