force-app/main/default/objects/Case/fields/L_BAU_Current_Year_level__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Current_Year_level__c</fullName>
    <formula>TEXT(L_BAU_Current_High_School__r.I_ST_Enquirer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year level</label>
    <type>Text</type>
</CustomField>