force-app/main/default/objects/Case/fields/L_BAU_Expected_year_of_completion__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Expected_year_of_completion__c</fullName>
    <formula>L_BAU_Current_High_School__r.I_ST_Expected_Year_Of_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected year of completion</label>
    <type>Text</type>
</CustomField>