force-app/main/default/objects/Case/fields/L_BAU_Gender__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Gender__c</fullName>
    <formula>TEXT(Contact.I_RS_Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>