force-app/main/default/objects/Case/fields/L_BAU_Interested_in_Community__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Interested_in_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finding out more about the Aspire Community Contribution interest</description>
    <inlineHelpText>Have you volunteered in the Community? Are you interested in finding out more about the Aspire Community Contribution Program?</inlineHelpText>
    <label>Interested in Community</label>
    <type>Checkbox</type>
</CustomField>