force-app/main/default/objects/Case/fields/L_BAU_Interested_in_Uni_Study__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Interested_in_Uni_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finding out the  interest in undertaking University subjects while completing Year 12?”</description>
    <inlineHelpText>“Are you interested in undertaking University subjects while completing Year 12?”</inlineHelpText>
    <label>Interested in Uni Study</label>
    <type>Checkbox</type>
</CustomField>