force-app/main/default/objects/Case/fields/L_BAU_Main_Language_Spoken_at_Home__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Main_Language_Spoken_at_Home__c</fullName>
    <description>Main Language Spoken at Home</description>
    <inlineHelpText>Main Language Spoken at Home</inlineHelpText>
    <label>Main Language Spoken at Home</label>
    <length>100</length>
    <type>Text</type>
</CustomField>