force-app/main/default/objects/Case/fields/L_BAU_Preference_3_Campus__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Preference_3_Campus__c</fullName>
    <label>Preference 3 Campus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>