force-app/main/default/objects/Case/fields/L_BAU_Preference_3_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Preference_3_Course_Name__c</fullName>
    <label>Preference 3 Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>