force-app/main/default/objects/Case/fields/L_BAU_Preference_3_VTAC_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Preference_3_VTAC_Course_Code__c</fullName>
    <label>Preference 3 VTAC Course Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>