force-app/main/default/objects/Case/fields/L_BAU_Preferences_1_pathway_course__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Preferences_1_pathway_course__c</fullName>
    <description>Preferences pathway course</description>
    <label>Preferences 1 pathway course</label>
    <length>100</length>
    <type>Text</type>
</CustomField>