force-app/main/default/objects/Case/fields/L_BAU_School_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_School_Endorsement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aspire 11  Form completed by School with information substantiating level of academic achievement</description>
    <inlineHelpText>Form completed by School with information substantiating level of academic achievement</inlineHelpText>
    <label>School Endorsement</label>
    <type>Checkbox</type>
</CustomField>