force-app/main/default/objects/Case/fields/L_BAU_USI_number__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_USI_number__c</fullName>
    <formula>Contact.I_RS_Unique_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USI number</label>
    <type>Text</type>
</CustomField>