force-app/main/default/objects/Case/fields/L_BAU_VTAC_applicant_number__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_VTAC_applicant_number__c</fullName>
    <formula>L_BAU_Current_High_School__r.I_ST_VTAC_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VTAC applicant number</label>
    <type>Text</type>
</CustomField>