force-app/main/default/objects/Case/fields/L_BAU_VTAC_NON_VTAC__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_VTAC_NON_VTAC__c</fullName>
    <description>Applicant VTAC/NON-VTAC</description>
    <inlineHelpText>Applicant VTAC/NON-VTAC</inlineHelpText>
    <label>VTAC/NON-VTAC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VTAC</fullName>
            </value>
            <value>
                <fullName>NON-VTAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>