force-app/main/default/objects/Case/fields/L_BAU_Year_11_Results__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Year_11_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Year 11 Results supplied by School status</description>
    <inlineHelpText>Year 11 Results supplied by School status</inlineHelpText>
    <label>Year 11 Results</label>
    <type>Checkbox</type>
</CustomField>