force-app/main/default/objects/Case/fields/Owner_is_logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_logged_in_User__c</fullName>
    <formula>IF ( Owner:User.Id = $User.Id,	TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is logged in User</label>
    <type>Checkbox</type>
</CustomField>