force-app/main/default/objects/Case/recordTypes/I_IL_LTU_INT_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>I_IL_LTU_INT_Enquiry</fullName>
    <active>true</active>
    <businessProcess>IST ENQUIRY</businessProcess>
    <description>Inbound case for LTU INT Team received via Phone/Email/Chat etc.</description>
    <label>LTU INT - Enquiry</label>
</RecordType>