force-app/main/default/objects/Case/recordTypes/I_ST_Activity_Booking.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Activity_Booking</fullName>
    <active>true</active>
    <businessProcess>IST Activity Booking</businessProcess>
    <description>Inbound Case received from Educational Institutes/Organisations for Tour/Event etc.</description>
    <label>Activity Booking</label>
</RecordType>