force-app/main/default/objects/Case/recordTypes/I_ST_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Enquiry</fullName>
    <active>true</active>
    <businessProcess>IST ENQUIRY</businessProcess>
    <description>Inbound Case for SACE Team received via Phone/Email/Chat etc.</description>
    <label>Enquiry</label>
</RecordType>