force-app/main/default/objects/Case/recordTypes/I_ST_Outbound.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Outbound</fullName>
    <active>true</active>
    <businessProcess>IST ENQUIRY</businessProcess>
    <description>Outbound Case for the Outbound campaign from SACE Team.</description>
    <label>Outbound</label>
</RecordType>