force-app/main/default/objects/Case/recordTypes/IST.recordType-meta.xml
<RecordType>
    <fullName>IST</fullName>
    <active>true</active>
    <businessProcess>PRIME</businessProcess>
    <description>Record type for IST Support</description>
    <label>IST</label>
</RecordType>