force-app/main/default/objects/Case/recordTypes/L_BAU_Admission.recordType-meta.xml
<RecordType>
    <fullName>L_BAU_Admission</fullName>
    <active>true</active>
    <businessProcess>Aspire Year 11 Admission</businessProcess>
    <description>Aspire Year 11 Admission</description>
    <label>SACE Admission</label>
</RecordType>