force-app/main/default/objects/Case/recordTypes/PRIME.recordType-meta.xml
<RecordType>
    <fullName>PRIME</fullName>
    <active>true</active>
    <businessProcess>PRIME</businessProcess>
    <label>PRIME</label>
</RecordType>