force-app/main/default/objects/Case/validationRules/I_RM_Mobile_OR_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>I_RM_Mobile_OR_Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() ,$Profile.Name =&apos;SACE User&apos;,
RecordType.DeveloperName = &apos;I_ST_Enquiry&apos;, ISBLANK( SuppliedEmail ) ,ISBLANK( SuppliedPhone ), ISBLANK( I_RM_Affiliation__c ) )</errorConditionFormula>
    <errorMessage>Phone Number OR Email are required to create a Student Lead (Dom)</errorMessage>
</ValidationRule>