force-app/main/default/objects/Case/validationRules/I_ST_Update_Transition_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>I_ST_Update_Transition_Not_Allowed</fullName>
    <active>true</active>
    <description>Added for IST  459</description>
    <errorConditionFormula>AND($Profile.Name =&apos;SACE User&apos;,OR(RecordType.DeveloperName = &apos;I_ST_Enquiry&apos;,RecordType.DeveloperName = &apos;I_ST_Outbound&apos;), OR(ISCHANGED(Status), ISNEW()), ISPICKVAL(Status , &apos;Updated&apos;) )</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Transition to Updated status is not allowed</errorMessage>
</ValidationRule>