force-app/main/default/objects/Case/listViews/All_Cases_From_Chat.listView-meta.xml
<ListView>
    <fullName>All_Cases_From_Chat</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Chat</value>
    </filters>
    <label>All Cases From Chat</label>
</ListView>