force-app/main/default/objects/Case/listViews/All_Cases_IST.listView-meta.xml
<ListView>
    <fullName>All_Cases_IST</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Case_Age__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.I_ST_Enquiry</value>
    </filters>
    <label>All Cases - SACE</label>
</ListView>