force-app/main/default/objects/Case/listViews/Animal_Ethics_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Animal_Ethics_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Animal Ethics Queue</label>
    <queue>Animal_Ethics_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>