force-app/main/default/objects/Case/listViews/Aspire_Admission_Case.listView-meta.xml
<ListView>
    <fullName>Aspire_Admission_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.L_BAU_Admission</value>
    </filters>
    <label>Aspire Admission</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <role>I_ST_SACE_Consultant</role>
        <role>I_ST_SACE_Manager</role>
        <role>I_ST_SACE_Team_Lead</role>
    </sharedTo>
</ListView>