force-app/main/default/objects/Case/listViews/Biosafety_Ethics_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Biosafety_Ethics_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Biosafety Ethics Queue</label>
    <queue>Biosafety_Ethics_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>