force-app/main/default/objects/Case/listViews/Human_Ethics_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Human_Ethics_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Human Ethics Queue</label>
    <queue>Human_Ethics_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>