force-app/main/default/objects/Case/listViews/I_IL_LTU_INT_Enquiries_Case.listView-meta.xml
<ListView>
    <fullName>I_IL_LTU_INT_Enquiries_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>LTU INT Enquiries</label>
    <queue>I_IL_LTU_INT_Enquiries</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>