force-app/main/default/objects/Case/listViews/I_RS_GRS_Queue_Case.listView-meta.xml
<ListView>
    <fullName>I_RS_GRS_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>GRS Queue</label>
    <queue>I_RS_GRS_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>