force-app/main/default/objects/Case/listViews/I_ST_Activity_Booking_Case.listView-meta.xml
<ListView>
    <fullName>I_ST_Activity_Booking_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>I_ST_Proposed_Start_Date_and_Time__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Activity Booking</label>
    <queue>I_ST_Activity_Booking</queue>
    <sharedTo>
        <role>I_ST_SACE_Consultant</role>
        <role>I_ST_SACE_Manager</role>
        <role>I_ST_SACE_Team_Lead</role>
    </sharedTo>
</ListView>